--- a/app/src/main/res/layout/activity_ppl2.xml
+++ b/app/src/main/res/layout/activity_ppl2.xml
@@ -1,57 +1,59 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".ppl2">
+    android:gravity="top"
+    android:orientation="vertical">
 
     <TextView
         android:id="@+id/pose2"
-        android:layout_width="wrap_content"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginStart="174dp"
-        android:layout_marginTop="104dp"
-        android:layout_marginEnd="179dp"
-        android:layout_marginBottom="608dp"
-        android:text="2명 포즈 추천"
+        android:background="#F8ECEB"
+        android:text="2인 포즈 추천"
         android:textAlignment="center"
-        android:textColor="#0F2BC6"
-        android:textSize="32sp"
-        android:textStyle="bold"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.479"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="1.0" />
+        android:textColor="#1130DD"
+        android:textSize="32sp" />
 
-    <ImageView
-        android:id="@+id/imageView"
-        android:layout_width="129dp"
-        android:layout_height="190dp"
-        android:layout_marginStart="31dp"
-        android:layout_marginTop="25dp"
-        android:layout_marginEnd="251dp"
-        android:layout_marginBottom="392dp"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/pose2"
-        app:srcCompat="@drawable/c1" />
+    <ScrollView
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:id="@+id/scrollView">
 
-    <ImageView
-        android:id="@+id/imageView2"
-        android:layout_width="163dp"
-        android:layout_height="187dp"
-        android:layout_marginStart="60dp"
-        android:layout_marginTop="25dp"
-        android:layout_marginEnd="28dp"
-        android:layout_marginBottom="395dp"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toEndOf="@+id/imageView"
-        app:layout_constraintTop_toBottomOf="@+id/pose2"
-        app:srcCompat="@drawable/c2" />
 
-</androidx.constraintlayout.widget.ConstraintLayout>
+     <LinearLayout
+         android:layout_width="match_parent"
+         android:layout_height="wrap_content"
+         android:orientation="vertical"
+         android:id="@+id/Linear2">
+
+
+
+
+
+
+
+
+
+
+
+     </LinearLayout>
+
+
+
+
+
+
+
+
+
+
+
+
+    </ScrollView>
+
+
+
+
+</LinearLayout>
