--- a/app/src/main/res/layout/activity_pplm.xml
+++ b/app/src/main/res/layout/activity_pplm.xml
@@ -2,65 +2,51 @@
 <GridLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    android:id="@+id/pose2"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="#F9DFDD"
+    tools:context=".PoseMajorityActivity"
     android:columnCount="2"
-    android:rowCount="3"
-    tools:context=".PoseMajorityActivity">
+    android:rowCount="3">
 
     <TextView
         android:layout_row="0"
         android:layout_column="0"
         android:layout_columnSpan="2"
         android:layout_gravity="fill_horizontal"
+        android:background="#E8E6D3"
         android:gravity="center"
-        android:text="2인 포즈 추천"
+        android:text="다인원 포즈 모음"
         android:textAlignment="center"
-        android:textColor="#1B34BF"
-        android:textSize="32dp" />
+        android:textColor="#115A14"
+        android:textSize="32dp"
+        android:textStyle="bold" />
 
     <ImageView
-        android:id="@+id/c1"
         android:layout_width="211dp"
         android:layout_height="273dp"
         android:layout_row="1"
         android:layout_column="0"
         android:scaleType="fitXY"
-        android:src="@drawable/c1" />
+        android:src="@drawable/m1" />
 
 
     <ImageView
-        android:id="@+id/f1"
-        android:layout_width="211dp"
-        android:layout_height="273dp"
-        android:layout_row="2"
-        android:layout_column="1"
-        android:scaleType="fitXY"
-        android:src="@drawable/f1" />
-
-    <ImageView
-        android:id="@+id/c2"
         android:layout_width="211dp"
         android:layout_height="273dp"
         android:layout_row="1"
         android:layout_column="1"
-        android:layout_columnSpan="1"
-        android:layout_gravity="fill_horizontal"
-        android:scaleType="fitXY"
-        android:src="@drawable/c2" />
-
+        android:src="@drawable/m2"
+        android:scaleType="fitXY"/>
     <ImageView
-        android:id="@+id/f2"
         android:layout_width="211dp"
         android:layout_height="273dp"
         android:layout_row="2"
         android:layout_column="0"
-        android:layout_columnSpan="1"
+        android:layout_columnSpan="2"
         android:layout_gravity="fill_horizontal"
-        android:scaleType="fitXY"
-        android:src="@drawable/f2" />
+        android:src="@drawable/m3"
+        android:scaleType="fitXY"/>
+
 
 
 </GridLayout>
