--- a/app/src/main/res/layout/activity_ppl2.xml
+++ b/app/src/main/res/layout/activity_ppl2.xml
@@ -22,7 +22,7 @@
         android:textSize="32dp" />
 
     <ImageView
-        android:id="@+id/c1"
+        android:id="@+id/f3"
         android:layout_width="211dp"
         android:layout_height="273dp"
         android:layout_row="1"
@@ -41,7 +41,7 @@
         android:src="@drawable/f1" />
 
     <ImageView
-        android:id="@+id/c2"
+        android:id="@+id/f4"
         android:layout_width="211dp"
         android:layout_height="273dp"
         android:layout_row="1"
