--- a/app/src/main/res/layout/activity_three_pose.xml
+++ b/app/src/main/res/layout/activity_three_pose.xml
@@ -23,12 +23,13 @@
         android:layout_width="169dp"
         android:layout_height="171dp"
         android:layout_marginStart="32dp"
-        android:layout_marginTop="30dp"
+        android:layout_marginTop="28dp"
         android:layout_marginEnd="24dp"
         app:layout_constraintEnd_toStartOf="@+id/imageView4"
+        app:layout_constraintHorizontal_bias="1.0"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/imageView7"
-        tools:srcCompat="@drawable/t_2" />
+        android:src="@drawable/t_2" />
 
     <ImageView
         android:id="@+id/imageView5"
@@ -41,7 +42,7 @@
         app:layout_constraintEnd_toStartOf="@+id/imageView6"
         app:layout_constraintHorizontal_bias="0.25"
         app:layout_constraintStart_toStartOf="parent"
-        tools:srcCompat="@drawable/t_4" />
+        android:src="@drawable/t_4" />
 
     <ImageView
         android:id="@+id/imageView6"
@@ -52,7 +53,7 @@
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         tools:ignore="MissingConstraints"
-        tools:srcCompat="@drawable/t_5" />
+        android:src="@drawable/t_5" />
 
     <ImageView
         android:id="@+id/imageView4"
@@ -62,7 +63,7 @@
         android:layout_marginEnd="24dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/imageView7"
-        tools:srcCompat="@drawable/t_1" />
+        android:src="@drawable/t_1" />
 
     <ImageView
         android:id="@+id/imageView7"
@@ -75,7 +76,7 @@
         app:layout_constraintHorizontal_bias="0.75"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/textView"
-        app:srcCompat="@drawable/t_3" />
+        android:src="@drawable/t_3" />
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
