--- a/app/src/main/res/layout/activity_props.xml
+++ b/app/src/main/res/layout/activity_props.xml
@@ -4,48 +4,34 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    tools:context=".Props"
     android:columnCount="2"
-    android:rowCount="3">
+    android:rowCount="2">
+
 
     <TextView
         android:layout_row="0"
         android:layout_column="0"
         android:layout_columnSpan="2"
         android:layout_gravity="fill_horizontal"
-        android:background="#E8E6D3"
+        android:background="#EEDCFD"
         android:gravity="center"
-        android:text="다인원 포즈 추천"
+        android:text="오늘의 소품 추천"
         android:textAlignment="center"
-        android:textColor="#115A14"
         android:textSize="32dp"
         android:textStyle="bold" />
 
     <ImageView
-        android:layout_width="211dp"
-        android:layout_height="273dp"
-        android:layout_row="1"
-        android:layout_column="0"
-        android:scaleType="fitXY"
-        android:src="@drawable/m6" />
-
-
-    <ImageView
-        android:layout_width="211dp"
-        android:layout_height="273dp"
-        android:layout_row="1"
-        android:layout_column="1"
-        android:src="@drawable/m2"
-        android:scaleType="fitXY"/>
-    <ImageView
-        android:layout_width="211dp"
-        android:layout_height="273dp"
-        android:layout_row="2"
+        android:id="@+id/SYSDOCU"
+        android:layout_width="350dp"
+        android:layout_height="300dp"
+        android:layout_row="0"
         android:layout_column="0"
         android:layout_columnSpan="2"
         android:layout_gravity="fill_horizontal"
-        android:src="@drawable/m5"
-        android:scaleType="fitXY"/>
+        android:layout_marginTop="150dp"
 
 
+        />
 
 </GridLayout>
