--- a/app/src/main/res/layout/activity_with_friend.xml
+++ b/app/src/main/res/layout/activity_with_friend.xml
@@ -8,7 +8,7 @@
     android:background="#EFF7F8"
     android:columnCount="2"
     android:rowCount="3"
-    tools:context=".PoseMajorityActivity">
+    tools:context=".ChooseRltshp">
 
     <TextView
         android:layout_row="0"
