--- a/app/src/main/res/layout/with_couple.xml
+++ b/app/src/main/res/layout/with_couple.xml
@@ -9,9 +9,10 @@
         android:id="@+id/textView"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginBottom="200dp"
         android:text="연인과 함께"
         android:textColor="@color/black"
-        android:textSize="20sp"
+        android:textSize="32dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.498"
