--- a/app/src/main/res/layout/activity_props.xml
+++ b/app/src/main/res/layout/activity_props.xml
@@ -14,13 +14,12 @@
         android:layout_column="0"
         android:layout_columnSpan="2"
         android:layout_gravity="fill_horizontal"
-        android:background="@color/purple_500"
+        android:background="@color/white"
         android:gravity="center"
         android:text="오늘의 소품 추천"
         android:textAlignment="center"
-        android:textColor="#FFFFFF"
-        android:textSize="32dp"
-        android:textStyle="bold" />
+        android:textColor="@color/black"
+        android:textSize="32dp" />
 
     <ImageView
         android:id="@+id/SYSDOCU"
