--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -8,4 +8,5 @@
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
     <color name="BlueViolet">#FF8A2BE2</color>
+    <color name="purple_300">#B8B5FF</color>
 </resources>
