--- a/app/src/main/res/layout/activity_family.xml
+++ b/app/src/main/res/layout/activity_family.xml
@@ -14,7 +14,7 @@
         android:layout_gravity="fill_horizontal"
         android:background="#FFFFFF"
         android:gravity="center"
-        android:text="가족 포즈 모음"
+        android:text="가족과 함께"
         android:textAlignment="center"
         android:textColor="@color/black"
         android:textSize="32dp" />
