--- a/app/src/main/res/layout/activity_choose_rltshp.xml
+++ b/app/src/main/res/layout/activity_choose_rltshp.xml
@@ -3,7 +3,8 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    android:background="@drawable/skycloud">
 
     <Button
         android:id="@+id/lovers"
@@ -13,8 +14,10 @@
         android:layout_marginTop="68dp"
         android:layout_marginEnd="105dp"
         android:layout_marginBottom="16dp"
+        android:backgroundTint="#BC2256"
         android:text="연인"
         android:textSize="34sp"
+        android:textStyle="bold"
         app:layout_constraintBottom_toTopOf="@+id/friends"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -25,11 +28,13 @@
         android:layout_width="197dp"
         android:layout_height="86dp"
         android:layout_marginStart="109dp"
-        android:layout_marginTop="28dp"
+        android:layout_marginTop="24dp"
         android:layout_marginEnd="105dp"
         android:layout_marginBottom="33dp"
+        android:backgroundTint="#BC2256"
         android:text="친구"
         android:textSize="34sp"
+        android:textStyle="bold"
         app:layout_constraintBottom_toTopOf="@+id/family"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -41,12 +46,14 @@
         android:layout_height="86dp"
         android:layout_marginStart="16dp"
         android:layout_marginBottom="16dp"
+        android:backgroundTint="#BC2256"
         android:text="가족"
         android:textSize="34sp"
+        android:textStyle="bold"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.469"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="@+id/lovers"
-        app:layout_constraintVertical_bias="0.555" />
+        app:layout_constraintVertical_bias="0.734" />
 </androidx.constraintlayout.widget.ConstraintLayout>
