--- a/app/src/main/res/layout/activity_family.xml
+++ b/app/src/main/res/layout/activity_family.xml
@@ -12,11 +12,11 @@
         android:layout_column="0"
         android:layout_columnSpan="2"
         android:layout_gravity="fill_horizontal"
-        android:background="#E8E6D3"
+        android:background="#FEFDF4"
         android:gravity="center"
-        android:text="가족 포즈 모음"
+        android:text="가족과 함께"
         android:textAlignment="center"
-        android:textColor="#115A14"
+        android:textColor="#05766C"
         android:textSize="32dp"
         android:textStyle="bold" />
 
