--- a/app/src/main/res/layout/activity_ppl.xml
+++ b/app/src/main/res/layout/activity_ppl.xml
@@ -3,7 +3,8 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    android:background="@drawable/heartheart">
 
     <Button
         android:id="@+id/people2"
@@ -13,10 +14,14 @@
         android:layout_marginTop="108dp"
         android:layout_marginEnd="107dp"
         android:layout_marginBottom="83dp"
+        android:backgroundTint="#9C27B0"
         android:text="2명"
+        android:textAlignment="center"
         android:textSize="34sp"
+        android:textStyle="bold"
         app:layout_constraintBottom_toTopOf="@+id/people34"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
@@ -27,8 +32,10 @@
         android:layout_marginStart="107dp"
         android:layout_marginEnd="107dp"
         android:layout_marginBottom="85dp"
+        android:backgroundTint="#9C27B0"
         android:text="3~4명"
         android:textSize="34sp"
+        android:textStyle="bold"
         app:layout_constraintBottom_toTopOf="@+id/peoplem"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
@@ -42,8 +49,10 @@
         android:layout_marginStart="107dp"
         android:layout_marginEnd="107dp"
         android:layout_marginBottom="197dp"
+        android:backgroundTint="#9C27B0"
         android:text="다인원"
         android:textSize="34sp"
+        android:textStyle="bold"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
