themes오류 수정 / 글씨 크기 조정

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -11,6 +11,9 @@
         android:layout_width="0dp"
         android:layout_height="0dp"
         android:text="인원별 포즈 추천"
+        android:textAlignment="center"
+        android:textSize="18sp"
+        android:textStyle="bold"
         app:layout_constraintBottom_toTopOf="@+id/button3"
         app:layout_constraintEnd_toStartOf="@+id/button2"
         app:layout_constraintHorizontal_bias="0.5"
@@ -22,6 +25,8 @@
         android:layout_width="0dp"
         android:layout_height="0dp"
         android:text="상황별 포즈 추천"
+        android:textSize="18sp"
+        android:textStyle="bold"
         app:layout_constraintBottom_toTopOf="@+id/cameraButton"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.5"
@@ -33,6 +38,8 @@
         android:layout_width="0dp"
         android:layout_height="0dp"
         android:text="오늘의 소품 추천"
+        android:textSize="18sp"
+        android:textStyle="bold"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toStartOf="@+id/cameraButton"
         app:layout_constraintHorizontal_bias="0.5"
@@ -44,6 +51,8 @@
         android:layout_width="0dp"
         android:layout_height="0dp"
         android:text="카메라 버튼"
+        android:textSize="18sp"
+        android:textStyle="bold"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
@@ -55,6 +64,8 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="12dp"
+        android:background="#F4F1F8"
+        android:backgroundTint="#F4F1F8"
         android:text="@string/project_title"
         android:textAppearance="@style/TextAppearance.AppCompat.Large"
         android:textSize="24sp"
