--- a/app/src/main/res/layout/activity_pplm.xml
+++ b/app/src/main/res/layout/activity_pplm.xml
@@ -12,11 +12,11 @@
         android:layout_column="0"
         android:layout_columnSpan="2"
         android:layout_gravity="fill_horizontal"
-        android:background="@color/white"
+        android:background="#F5F4EB"
         android:gravity="center"
         android:text="다인원 포즈 추천"
         android:textAlignment="center"
-        android:textColor="@color/black"
+        android:textColor="@color/teal_700"
         android:textSize="32dp" />
 
     <ImageView
